# 42tester

./: .gitignore  README.md  bonus.c  main.c
Libft/: .gitignore  Makefile  README.md  bonus.c  bonus.h  main.c  main.h  test.sh  watch.sh
Philosophers/: Cargo.toml  tests.txt
Philosophers/src/: main.rs
cub3d/: cub3d.supp
ft_printf/: .gitignore  Makefile  README.md  ft_printf  main.c  test.sh  watch.sh
get_next_line/: .gitignore  Makefile  README.md  bonus.c  expected_output  expected_output_bonus  input.txt  main.c  mandatory.c  test.sh  test.txt  utils.c
pipex/: tests.sh
push_swap/: Cargo.toml  tests.sh
push_swap/src/: main.rs
so_long/: stack_destroyer.ber
