[package]
name = "push_swap_tester"
version = "0.1.0"
authors = ["Arnaud Lier <arnaud@lier.link>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
threadpool = "1.8.1"
